fix width overflow-x

--- a/src/css-dev/style.css
+++ b/src/css-dev/style.css
@@ -5,6 +5,7 @@ html, body {
     word-wrap: break-word;
     text-align: justify;
     background-color: #f4f2ec;
+    width: 100vw;
 }
 
 img{
